{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 635,
  "lineage": "f8498694-efe3-bf0c-636b-94a266d63f06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_eni_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:security-group/sg-0c8b99500b11ca24e",
            "description": "efs_eni_sg",
            "egress": [],
            "id": "sg-0c8b99500b11ca24e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0da78b21369b28fdd"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "efs_eni_sg",
            "name_prefix": "",
            "owner_id": "022866271831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs_eni_sg",
              "Project_Name": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "efs_eni_sg",
              "Project_Name": "clamav-lambda-ext"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:security-group/sg-0da78b21369b28fdd",
            "description": "efs_instance_sg",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8b99500b11ca24e"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "id": "sg-0da78b21369b28fdd",
            "ingress": [],
            "name": "efs_instance_sg",
            "name_prefix": "",
            "owner_id": "022866271831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "efs_instance_sg",
              "Project_Name": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "efs_instance_sg",
              "Project_Name": "clamav-lambda-ext"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_standard_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:security-group/sg-0698b12cab566ef66",
            "description": "lambda_standard_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0698b12cab566ef66",
            "ingress": [],
            "name": "lambda_standard_sg",
            "name_prefix": "",
            "owner_id": "022866271831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lambda_standard_sg",
              "Project_Name": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "lambda_standard_sg",
              "Project_Name": "clamav-lambda-ext"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:security-group/sg-0b90413fdb940ce00",
            "description": "ssh-public-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b90413fdb940ce00",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-public-sg",
            "name_prefix": "",
            "owner_id": "022866271831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-public-sg",
              "Project_Name": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "ssh-public-sg",
              "Project_Name": "clamav-lambda-ext"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_eni_sg_ingress_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-2942312958",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c8b99500b11ca24e",
            "self": false,
            "source_security_group_id": "sg-0da78b21369b28fdd",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_eni_sg",
            "aws_security_group.efs_instance_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs_instance_sg_egress_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 2049,
            "id": "sgrule-3955044460",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0da78b21369b28fdd",
            "self": false,
            "source_security_group_id": "sg-0c8b99500b11ca24e",
            "to_port": 2049,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs_eni_sg",
            "aws_security_group.efs_instance_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lambda_standard_sg_egress_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3700480762",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0698b12cab566ef66",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda_standard_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "std_egress_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1834526495",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b90413fdb940ce00",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh_public_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "std_ingress_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3953258127",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b90413fdb940ce00",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ssh_public_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.egress_subnet",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:vpc/vpc-04ee9fddc055a857d",
            "cidr_block": "10.2.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0118dfc3cef6c7b15",
                "cidr_block": "10.2.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bed49ad4f848189d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ee9fddc055a857d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0301ea6ee9490a41b",
            "owner_id": "022866271831",
            "state": "available",
            "tags": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            }
          }
        }
      ]
    },
    {
      "module": "module.egress_subnet",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05baa43d25b087865",
            "association_id": "eipassoc-0799363db376b25c3",
            "domain": "vpc",
            "id": "eipalloc-05baa43d25b087865",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-033b1e9f38d397f17",
            "private_dns": "ip-10-2-0-84.ap-southeast-1.compute.internal",
            "private_ip": "10.2.0.84",
            "public_dns": "ec2-13-251-57-93.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.57.93",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.egress_subnet",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "standard_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05baa43d25b087865",
            "connectivity_type": "public",
            "id": "nat-0d9ee198b910abe3f",
            "network_interface_id": "eni-033b1e9f38d397f17",
            "private_ip": "10.2.0.84",
            "public_ip": "13.251.57.93",
            "subnet_id": "subnet-0549897312b5f8497",
            "tags": {
              "Name": "egress_subnet_1-natgw",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "egress_subnet_1-natgw",
              "Project": "clamav-lambda-ext"
            }
          },
          "dependencies": [
            "module.egress_subnet.aws_eip.eip",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route.internet_route",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table.standard_public_subnet_rt",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_subnet.standard_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table_association.standard_public_subnet_rt_assoc",
            "module.standard_public_private_zone.module.standard_public_subnet.data.aws_vpc.vpc",
            "module.vpc.aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.egress_subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3b09e76f4825c7b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d9ee198b910abe3f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3b09e76f4825c7b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.egress_subnet.aws_nat_gateway.standard_nat_gateway",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route.internet_route",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_subnet.standard_subnet",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table_association.standard_public_subnet_rt_assoc",
            "module.standard_public_private_zone.module.standard_public_subnet.data.aws_vpc.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.egress_subnet.aws_eip.eip",
            "module.egress_subnet.aws_route_table.standard_egress_subnet_rt",
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table.standard_public_subnet_rt"
          ]
        }
      ]
    },
    {
      "module": "module.egress_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "standard_egress_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:route-table/rtb-0d3b09e76f4825c7b",
            "id": "rtb-0d3b09e76f4825c7b",
            "owner_id": "022866271831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9ee198b910abe3f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "egress_subnet_1-rt"
            },
            "tags_all": {
              "Name": "egress_subnet_1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.egress_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "standard_egress_subnet_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b414aa34287a8a8c",
            "route_table_id": "rtb-0d3b09e76f4825c7b",
            "subnet_id": "subnet-051e6740666a774a5"
          },
          "dependencies": [
            "module.egress_subnet.aws_route_table.standard_egress_subnet_rt",
            "module.egress_subnet.aws_subnet.standard_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.egress_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "standard_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:subnet/subnet-051e6740666a774a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.6.0/24",
            "id": "subnet-051e6740666a774a5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022866271831",
            "tags": {
              "Name": "egress_subnet_1",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "egress_subnet_1",
              "Project": "clamav-lambda-ext"
            },
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_ec2_fleet",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fed77069cd5a6d6c",
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:instance/i-0f311b0c7b4ea3b67",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ec2-clamav-admin-instance-profile",
            "id": "i-0f311b0c7b4ea3b67",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.xlarge",
            "ipv6_address_count": 0,
            "key_name": "newkp1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9a0ce2d38f2f1af",
            "private_dns": "ip-10-2-0-254.ap-southeast-1.compute.internal",
            "private_ip": "10.2.0.254",
            "public_dns": "ec2-3-0-184-200.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.184.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c281bdd3699df79a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0549897312b5f8497",
            "tags": {
              "Name": "ec2_clamav-admin-0",
              "Project_Name": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "ec2_clamav-admin-0",
              "Project_Name": "clamav-lambda-ext"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b90413fdb940ce00",
              "sg-0da78b21369b28fdd"
            ]
          },
          "dependencies": [
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.efs_instance_sg",
            "aws_security_group.ssh_public_sg",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table.standard_public_subnet_rt",
            "module.standard_ec2_fleet.aws_iam_instance_profile.ec2_instance_profile",
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route.internet_route",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table_association.standard_public_subnet_rt_assoc",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_subnet.standard_subnet",
            "module.standard_public_private_zone.module.standard_public_subnet.data.aws_vpc.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:vpc/vpc-04ee9fddc055a857d",
            "cidr_block": "10.2.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0118dfc3cef6c7b15",
                "cidr_block": "10.2.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bed49ad4f848189d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ee9fddc055a857d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0301ea6ee9490a41b",
            "owner_id": "022866271831",
            "state": "available",
            "tags": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            }
          }
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_private_subnet[0]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:vpc/vpc-04ee9fddc055a857d",
            "cidr_block": "10.2.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0118dfc3cef6c7b15",
                "cidr_block": "10.2.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bed49ad4f848189d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ee9fddc055a857d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0301ea6ee9490a41b",
            "owner_id": "022866271831",
            "state": "available",
            "tags": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            }
          }
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_private_subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "standard_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:subnet/subnet-0d605f6151bc742d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.3.0/24",
            "id": "subnet-0d605f6151bc742d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022866271831",
            "tags": {
              "Name": "private_zone_private_subnet_0",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "private_zone_private_subnet_0",
              "Project": "clamav-lambda-ext"
            },
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "dependencies": [
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_private_subnet[1]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:vpc/vpc-04ee9fddc055a857d",
            "cidr_block": "10.2.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0118dfc3cef6c7b15",
                "cidr_block": "10.2.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bed49ad4f848189d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ee9fddc055a857d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0301ea6ee9490a41b",
            "owner_id": "022866271831",
            "state": "available",
            "tags": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            }
          }
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_private_subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "standard_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:subnet/subnet-028aa49f825e5b134",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.2.4.0/24",
            "id": "subnet-028aa49f825e5b134",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022866271831",
            "tags": {
              "Name": "private_zone_private_subnet_1",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "private_zone_private_subnet_1",
              "Project": "clamav-lambda-ext"
            },
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.data.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_private_subnet[2]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:vpc/vpc-04ee9fddc055a857d",
            "cidr_block": "10.2.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0118dfc3cef6c7b15",
                "cidr_block": "10.2.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bed49ad4f848189d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ee9fddc055a857d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0301ea6ee9490a41b",
            "owner_id": "022866271831",
            "state": "available",
            "tags": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            }
          }
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_private_subnet[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "standard_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:subnet/subnet-0b12b8944f0ce7526",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.2.5.0/24",
            "id": "subnet-0b12b8944f0ce7526",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "022866271831",
            "tags": {
              "Name": "private_zone_private_subnet_2",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "private_zone_private_subnet_2",
              "Project": "clamav-lambda-ext"
            },
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "dependencies": [
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[0]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:vpc/vpc-04ee9fddc055a857d",
            "cidr_block": "10.2.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0118dfc3cef6c7b15",
                "cidr_block": "10.2.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bed49ad4f848189d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ee9fddc055a857d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0301ea6ee9490a41b",
            "owner_id": "022866271831",
            "state": "available",
            "tags": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            }
          }
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059d2e0df5bd041b4",
            "id": "r-rtb-0a65d95ce080c5a361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a65d95ce080c5a36",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table.standard_public_subnet_rt",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[0]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "standard_public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:route-table/rtb-0a65d95ce080c5a36",
            "id": "rtb-0a65d95ce080c5a36",
            "owner_id": "022866271831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059d2e0df5bd041b4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_zone_public_subnet_0-rt"
            },
            "tags_all": {
              "Name": "public_zone_public_subnet_0-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[0]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "standard_public_subnet_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084068bb66c3b2643",
            "route_table_id": "rtb-0a65d95ce080c5a36",
            "subnet_id": "subnet-0549897312b5f8497"
          },
          "dependencies": [
            "module.standard_public_private_zone.module.standard_public_subnet.aws_subnet.standard_subnet",
            "module.vpc.aws_vpc.vpc",
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table.standard_public_subnet_rt"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[0]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "standard_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:subnet/subnet-0549897312b5f8497",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.2.0.0/24",
            "id": "subnet-0549897312b5f8497",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022866271831",
            "tags": {
              "Name": "public_zone_public_subnet_0",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "public_zone_public_subnet_0",
              "Project": "clamav-lambda-ext"
            },
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "dependencies": [
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[1]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:vpc/vpc-04ee9fddc055a857d",
            "cidr_block": "10.2.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0118dfc3cef6c7b15",
                "cidr_block": "10.2.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bed49ad4f848189d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ee9fddc055a857d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0301ea6ee9490a41b",
            "owner_id": "022866271831",
            "state": "available",
            "tags": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            }
          }
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[1]",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059d2e0df5bd041b4",
            "id": "r-rtb-01599e0c80db9e6cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01599e0c80db9e6cf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table.standard_public_subnet_rt",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[1]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "standard_public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:route-table/rtb-01599e0c80db9e6cf",
            "id": "rtb-01599e0c80db9e6cf",
            "owner_id": "022866271831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059d2e0df5bd041b4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_zone_public_subnet_1-rt"
            },
            "tags_all": {
              "Name": "public_zone_public_subnet_1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[1]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "standard_public_subnet_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b696474a6eb0199",
            "route_table_id": "rtb-01599e0c80db9e6cf",
            "subnet_id": "subnet-0c05e10b2473099c4"
          },
          "dependencies": [
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table.standard_public_subnet_rt",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_subnet.standard_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[1]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "standard_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:subnet/subnet-0c05e10b2473099c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-0c05e10b2473099c4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022866271831",
            "tags": {
              "Name": "public_zone_public_subnet_1",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "public_zone_public_subnet_1",
              "Project": "clamav-lambda-ext"
            },
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "dependencies": [
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.vpc.aws_vpc.vpc",
            "module.standard_public_private_zone.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[2]",
      "mode": "data",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:vpc/vpc-04ee9fddc055a857d",
            "cidr_block": "10.2.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0118dfc3cef6c7b15",
                "cidr_block": "10.2.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0bed49ad4f848189d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ee9fddc055a857d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0301ea6ee9490a41b",
            "owner_id": "022866271831",
            "state": "available",
            "tags": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            }
          }
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[2]",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-059d2e0df5bd041b4",
            "id": "r-rtb-0c5e2d47ced4623ed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c5e2d47ced4623ed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table.standard_public_subnet_rt",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[2]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "standard_public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:route-table/rtb-0c5e2d47ced4623ed",
            "id": "rtb-0c5e2d47ced4623ed",
            "owner_id": "022866271831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059d2e0df5bd041b4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_zone_public_subnet_2-rt"
            },
            "tags_all": {
              "Name": "public_zone_public_subnet_2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[2]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "standard_public_subnet_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0922f48d5cbb3f8f2",
            "route_table_id": "rtb-0c5e2d47ced4623ed",
            "subnet_id": "subnet-005d99aea9b2c0f45"
          },
          "dependencies": [
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_route_table.standard_public_subnet_rt",
            "module.standard_public_private_zone.module.standard_public_subnet.aws_subnet.standard_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.standard_public_private_zone.module.standard_public_subnet[2]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "standard_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:subnet/subnet-005d99aea9b2c0f45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-005d99aea9b2c0f45",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "022866271831",
            "tags": {
              "Name": "public_zone_public_subnet_2",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "public_zone_public_subnet_2",
              "Project": "clamav-lambda-ext"
            },
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "dependencies": [
            "module.standard_public_private_zone.data.aws_region.current",
            "module.standard_public_private_zone.data.aws_vpc.vpc",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:internet-gateway/igw-059d2e0df5bd041b4",
            "id": "igw-059d2e0df5bd041b4",
            "owner_id": "022866271831",
            "tags": {
              "Name": "vpc-01-igw"
            },
            "tags_all": {
              "Name": "vpc-01-igw"
            },
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_standard_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:security-group/sg-086e2d70db65a05d9",
            "description": "clamav-lambda-ext project",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086e2d70db65a05d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "clamav-lambda-ext-std-sg",
            "name_prefix": "",
            "owner_id": "022866271831",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-01-std-sg",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "vpc-01-std-sg",
              "Project": "clamav-lambda-ext"
            },
            "timeouts": null,
            "vpc_id": "vpc-04ee9fddc055a857d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "std_egress_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3648589605",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-086e2d70db65a05d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_security_group.vpc_standard_sg"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "std_ingress_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.2.0.0/16"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3978427433",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-086e2d70db65a05d9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.vpc_standard_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:022866271831:vpc/vpc-04ee9fddc055a857d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0885660a12b8c41a0",
            "default_route_table_id": "rtb-0301ea6ee9490a41b",
            "default_security_group_id": "sg-083e2c83aac53c069",
            "dhcp_options_id": "dopt-0bed49ad4f848189d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04ee9fddc055a857d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0301ea6ee9490a41b",
            "owner_id": "022866271831",
            "tags": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            },
            "tags_all": {
              "Name": "vpc-01",
              "Project": "clamav-lambda-ext"
            }
          }
        }
      ]
    }
  ]
}